--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,11 @@
 @import "fonts"
 @import "libs"
 
+// скролл на телефоне
+// фиксированное меню или стрелочка (бургер)
+// галерея - расширение
+// менять url (сохранять вкладку при перезагрузке)
+
 body
   color: $dark
   font-family: $default-font
@@ -55,8 +60,7 @@ header
         transition: 0.3s
         &:hover
           border-left: 3px solid $accent2
-          .title
-            color: $accent2
+          color: $accent2
         .icon
           display: flex
           justify-content: center
@@ -64,7 +68,6 @@ header
           .fas
             font-size: 20px
         .title
-          transition: 0.3s
           display: flex
           justify-content: flex-start
           align-items: center
@@ -100,23 +103,30 @@ header
       p
         margin-bottom: 10px
         font-size: 18px
+        text-align: justify
       .pictures
         display: grid
         grid-template-columns: 1fr 1fr
         grid-gap: 20px
         .item
-          margin: 0
           display: flex
           justify-content: center
           align-items: center
+          transition: 0.5s
+          &:hover
+            z-index: 2
+            transform: scale(1.05)
+            cursor: pointer
+            -webkit-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
+            -moz-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
+            box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
+            img
+              filter: sepia(100%)
           img
             width: 100%
+            height: 300px
+            object-fit: cover
             transition: 0.5s
-            &:hover
-              transform: scale(1.05)
-              -webkit-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
-              -moz-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
-              box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
 
 footer
   background-color: $accent1
