--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -89,18 +89,19 @@ header
     padding: 40px 50px
     .tab-pane
       max-width: 100%
-      h2
+      .title-2
         margin-bottom: 40px
         font-size: 30px
         text-align: center
         font-weight: bold
-      h3
+      .title-3
         padding-top: 20px
         border-top: 2px solid rgba(217, 172, 87, 0.5)
         margin: 30px 0
         font-size: 25px
         text-align: center
-      p
+      .text-paragraph
+        text-indent: 3em
         margin-bottom: 10px
         font-size: 18px
         text-align: justify
@@ -116,17 +117,20 @@ header
           &:hover
             z-index: 2
             transform: scale(1.05)
-            cursor: pointer
             -webkit-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
             -moz-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
             box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
-            img
-              filter: sepia(100%)
-          img
+            .image
+              img
+                filter: sepia(100%)
+          .image
             width: 100%
-            height: 300px
-            object-fit: cover
-            transition: 0.5s
+            height: 100%
+            img
+              width: 100%
+              height: 300px
+              object-fit: cover
+              transition: 0.5s
 
 footer
   background-color: $accent1
