--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 @import "fonts"
 @import "libs"
 
-// скролл на телефоне
+// скроллбар на телефоне
 // фиксированное меню или стрелочка (бургер)
 // галерея - расширение
 // менять url (сохранять вкладку при перезагрузке)
@@ -100,7 +100,7 @@ header
         margin: 30px 0
         font-size: 25px
         text-align: center
-      .text-paragraph
+      .paragraph
         text-indent: 3em
         margin-bottom: 10px
         font-size: 18px
@@ -108,7 +108,7 @@ header
       .pictures
         display: grid
         grid-template-columns: 1fr 1fr
-        grid-gap: 20px
+        grid-gap: 15px
         .item
           display: flex
           justify-content: center
@@ -133,8 +133,30 @@ header
               transition: 0.5s
 
 footer
-  background-color: $accent1
-  padding: 80px 0
+  .footer-content
+
+.modal-dialog
+  max-width: 800px
+  margin: 1.75rem auto
+  .modal-content
+    background-color: $light2
+    border: none
+    border-radius: 0
+    background-clip: border-box
+    .modal-header
+      border-bottom: 1px solid $light1
+      border-radius: 0
+    .modal-body
+      display: flex
+      justify-content: center
+      padding: 0
+      img
+        width: 100%
+        height: 500px
+        object-fit: cover
+    .modal-footer
+      justify-content: center
+      border-top: 1px solid $light1
 
 @import "media"
 // Always at the end
