--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -105,7 +105,7 @@ header
         margin-bottom: 10px
         font-size: 18px
         text-align: justify
-      .pictures
+      #pictures
         display: grid
         grid-template-columns: 1fr 1fr
         grid-gap: 15px
@@ -135,28 +135,6 @@ header
 footer
   .footer-content
 
-.modal-dialog
-  max-width: 800px
-  margin: 1.75rem auto
-  .modal-content
-    background-color: $light2
-    border: none
-    border-radius: 0
-    background-clip: border-box
-    .modal-header
-      border-bottom: 1px solid $light1
-      border-radius: 0
-    .modal-body
-      display: flex
-      justify-content: center
-      padding: 0
-      img
-        width: 100%
-        height: 500px
-        object-fit: cover
-    .modal-footer
-      justify-content: center
-      border-top: 1px solid $light1
 
 @import "media"
 // Always at the end
