--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -3,7 +3,7 @@ $accent1: rgba(70, 138, 152, 1) // #468a98
 $accent2: rgba(217, 172, 87, 1) // #d9ac57
 $light1: rgba(234, 238, 239, 1) // #eaeeef
 $light2: rgba(248, 249, 250, 1) // #f8f9fa
-$dark: rgba(75, 87, 92, 1) // #468a98
+$dark: rgba(75, 87, 92, 1) // #4b575c
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
