--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,8 +2,8 @@
 @import "fonts"
 @import "libs"
 
-// скроллбар на телефоне
-// фиксированное меню или стрелочка (бургер)
+// скроллбар на телефоне (позже)
+// фиксированное меню, стрелочка, "бургер"...
 // галерея - расширение
 // менять url (сохранять вкладку при перезагрузке)
 
@@ -29,19 +29,35 @@ body
 
 header
   background-color: $accent1
-  .header_top
-    padding: 30px 0
-  .header_bottom
-    padding: 20px 0
+  .header-inner
+    max-width: 1525px
+    padding: 15px 50px
+    margin: 0 auto
+    display: grid
+    grid-template-columns: 1fr 1fr
+    grid-gap: 10px
+    a
+      text-decoration: none
+      color: $light2
+      &:hover
+        color: $light1
+    .logo
+      display: flex
+      justify-content: flex-start
+      .fa-pied-piper-alt
+        font-size: 40px
+    .about
+      display: flex
+      justify-content: flex-end
 
 .main
   max-width: 1525px
-  padding: 50px 100px
-  margin: 0 auto 0 auto
+  padding: 50px 50px 0
+  margin: 0 auto
   display: grid
   grid-template-columns: 1fr 4fr
   grid-template-rows: auto
-  grid-gap: 70px
+  grid-gap: 50px
   nav
     text-transform: uppercase
     .list-group
@@ -86,18 +102,18 @@ header
     min-height: 100vh
     max-height: 100%
     background-color: $light1
-    padding: 40px 50px
+    padding: 50px
     .tab-pane
       max-width: 100%
       .title-2
-        margin-bottom: 40px
+        margin-bottom: 25px
         font-size: 30px
         text-align: center
         font-weight: bold
       .title-3
-        padding-top: 20px
+        padding-top: 18px
         border-top: 2px solid rgba(217, 172, 87, 0.5)
-        margin: 30px 0
+        margin: 20px 0
         font-size: 25px
         text-align: center
       .paragraph
@@ -108,7 +124,7 @@ header
       #pictures
         display: grid
         grid-template-columns: 1fr 1fr
-        grid-gap: 15px
+        grid-gap: 20px
         .item
           display: flex
           justify-content: center
@@ -133,8 +149,20 @@ header
               transition: 0.5s
 
 footer
-  .footer-content
-
+  max-width: 1525px
+  margin: 0 auto
+  padding: 50px
+  display: flex
+  justify-content: flex-end
+  .footer-inner
+    text-align: center
+    a
+      text-decoration: none
+      color: $accent1
+      border-bottom: 2px solid $accent1
+      &:hover
+        color: $accent2
+        border-bottom: 2px solid $accent2
 
 @import "media"
 // Always at the end
