big fixes, gallery+, photoswipe+, header+

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -8,6 +8,10 @@
     grid-gap: 30px
     grid-template-columns: auto
     padding: 30px 50px 0
+    .tab-content
+      .tab-pane
+        #pictures
+          grid-template-columns: 1fr 1fr
 
 // ≥992px
 +media-breakpoint-down(md)
