--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,16 +4,18 @@
 
 // вместо цветов меняю opacity (плохо)
 // скроллбар на телефоне (позже)
-// фиксированное меню, стрелочка, "бургер"...
-// галерея - расширение (js)
-// менять url при выборе пункта меню
-// сохранять текущий пункт при перезагрузке
+// стрелочка "вверх"
+// галерея - исправить открытие фото
+// менять url при выборе пункта меню (сохранение страницы)
 
 body
   color: $dark
   font-family: $default-font
   background-color: $light2
   height: 100%
+
+a
+  transition: 0.2s
 
 ::selection
   background-color: $accent1
@@ -30,7 +32,8 @@ body
   z-index: 3
 
 header
-  background-color: $accent1
+  background-color: $light2
+  border-bottom: 2px solid $light1
   line-height: 0 // возможно, костыль
   .header-inner
     max-width: 1525px
@@ -43,19 +46,21 @@ header
     font-weight: 300
     a
       text-decoration: none
-      color: $light2
-      &:hover
-        color: $light1
+      color: $dark
     .logo
       display: flex
       justify-content: flex-start
-      a
-        font-weight: bold
+      #logo-link
         text-transform: uppercase
         font-size: 20px
+        &:hover
+          color: $accent2
     .about
       display: flex
       justify-content: flex-end
+      #about-link
+        &:hover
+          color: $accent1
 
 .main
   max-width: 1525px
@@ -79,7 +84,6 @@ header
         grid-template-columns: 1fr 5fr
         grid-gap: 20px
         border-left: 3px solid $accent1
-        transition: 0.2s
         &:hover
           border-left: 3px solid $accent2
           color: $accent2
@@ -98,7 +102,6 @@ header
       .active
         background-color: rgba(70, 138, 152, 0.95)
         color: $accent2
-        transition: 0.2s
         border-left: 6px solid $accent2
         &:hover
           background-color: $accent1
@@ -131,22 +134,20 @@ header
         text-align: justify
       #pictures
         display: grid
-        grid-template-columns: 1fr 1fr
+        grid-template-columns: 1fr 1fr 1fr
         grid-gap: 20px
         .item
           display: flex
           justify-content: center
           align-items: center
           transition: 0.5s
+          margin: 0
           &:hover
             z-index: 2
             transform: scale(1.05)
             -webkit-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
             -moz-box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
             box-shadow: 0 0 20px 0 rgba(75, 87, 92, 0.75)
-            .image
-              img
-                filter: sepia(100%)
           .image
             width: 100%
             height: 100%
