--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,7 @@
 @import "fonts"
 @import "libs"
 
+// тестовый коммит (залогинился)
 // вместо цветов меняю opacity (плохо)
 // скроллбар на телефоне (позже)
 // стрелочка "вверх"
