--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,9 +1,18 @@
 $default-font: "roboto-example", sans-serif
+
+// accent1
 $accent1: rgba(70, 138, 152, 1) // #468a98
+$accent1-shade: rgba(61, 121, 133, 1) // #3d7985
+$accent1-tint: rgba(213, 224, 246, 1) // #c0d1f1
+$accent1-tone: rgba(232, 240, 242, 1) // #e8f0f2
+
+// accent2
 $accent2: rgba(217, 172, 87, 1) // #d9ac57
-$light1: rgba(234, 238, 239, 1) // #eaeeef
-$light2: rgba(248, 249, 250, 1) // #f8f9fa
-$dark: rgba(75, 87, 92, 1) // #4b575c
+$accent2-tint: rgba(236, 213, 171, 1) // #e3c181
+
+// additional
+$additional: rgba(248, 249, 250, 1) // #f8f9fa
+$additional-shade: rgba(93, 93, 94, 1) // #5d5d5e
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
