minor-minor fixes, colors+

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -3,8 +3,8 @@ $default-font: "roboto-example", sans-serif
 // accent1
 $accent1: rgba(70, 138, 152, 1) // #468a98
 $accent1-shade: rgba(61, 121, 133, 1) // #3d7985
-$accent1-tint: rgba(213, 224, 246, 1) // #c0d1f1
-$accent1-tone: rgba(232, 240, 242, 1) // #e8f0f2
+$accent1-tint1: rgba(232, 240, 242, 1) // #e8f0f2
+$accent1-tint2: rgba(209, 226, 229, 1) // #d1e2e5
 
 // accent2
 $accent2: rgba(217, 172, 87, 1) // #d9ac57
